Bug 331494 - Marble crashes when adding a bookmark and creating a new folder at the same time
Summary: Marble crashes when adding a bookmark and creating a new folder at the same time
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.9 (KDE 4.14)
Platform: Kubuntu Linux
: HI major
Target Milestone: ---
Assignee: Dennis Nienhüser
URL:
Keywords: drkonqi
: 333188 338189 344880 350857 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-25 14:51 UTC by flyos
Modified: 2015-08-01 17:15 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Applications/14.12.4
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (12.14 KB, text/plain)
2014-03-25 12:19 UTC, Alan Prescott
Details
New crash information added by DrKonqi (12.43 KB, text/plain)
2014-04-30 15:47 UTC, Julien MÊME
Details
New crash information added by DrKonqi (11.99 KB, text/plain)
2014-07-10 06:16 UTC, Vladislav Vorobiev
Details
New crash information added by DrKonqi (14.10 KB, text/plain)
2014-08-20 21:34 UTC, Martin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description flyos 2014-02-25 14:51:56 UTC
Application: marble (1.7.0 (stable version))
KDE Platform Version: 4.12.2
Qt Version: 4.8.2
Operating System: Linux 3.2.0-59-generic x86_64
Distribution: Ubuntu 12.04.4 LTS

-- Information about the crash:
- What I was doing when the application crashed:
When trying to set up a bookmark (via right click > Add a bookmark) and creating a folder (using the  "New folder" option in the bookmark pop-up window), Marble crashes right after clicking on "OK".

Always happens.

Distribution : Kubuntu 12.04 using KDE 4.12.2 (via the backports PPA)
Marble : Version 1.7.0

The crash can be reproduced every time.

-- Backtrace:
Application: Globe Virtuel Marble (marble), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fe1243fb780 (LWP 1456))]

Thread 9 (Thread 0x7fe10e011700 (LWP 1457)):
#0  0x00007fe11b313e9e in pthread_mutex_lock () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe11a8305b1 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe11a7f4ef5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe11a7f5124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fe1210cc926 in QEventDispatcherGlib::processEvents (this=0x7fe1080008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007fe12109be62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fe12109c0b7 in QEventLoop::exec (this=0x7fe10e010dd0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fe120f9b077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007fe12107bb6f in QInotifyFileSystemWatcherEngine::run (this=0x1a3b4f0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007fe120f9e09b in QThreadPrivate::start (arg=0x1a3b4f0) at thread/qthread_unix.cpp:307
#10 0x00007fe11b311e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#11 0x00007fe1209563fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7fe105f07700 (LWP 1458)):
#0  0x00007fe11b31505d in pthread_mutex_unlock () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe11a8305e1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe11a7f47fb in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe11a7f4f1b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fe11a7f5124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fe1210cc926 in QEventDispatcherGlib::processEvents (this=0x7fe1000008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007fe12109be62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007fe12109c0b7 in QEventLoop::exec (this=0x7fe105f06dd0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007fe120f9b077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x00007fe12107bb6f in QInotifyFileSystemWatcherEngine::run (this=0x1ab0670) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007fe120f9e09b in QThreadPrivate::start (arg=0x1ab0670) at thread/qthread_unix.cpp:307
#11 0x00007fe11b311e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#12 0x00007fe1209563fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#13 0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7fe0fa943700 (LWP 1459)):
#0  0x00007fe11b315d84 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe11ed0bdec in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007fe11ed0bf19 in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007fe11b311e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007fe1209563fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7fe0fa042700 (LWP 1460)):
#0  0x00007fe11b313f69 in pthread_mutex_lock () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe11a8305b1 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe11a7f4fdb in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe11a7f5124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fe1210cc926 in QEventDispatcherGlib::processEvents (this=0x7fe0f40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007fe12109be62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fe12109c0b7 in QEventLoop::exec (this=0x7fe0fa041e00, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fe120f9b077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007fe120f9e09b in QThreadPrivate::start (arg=0x1fcd110) at thread/qthread_unix.cpp:307
#9  0x00007fe11b311e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#10 0x00007fe1209563fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fe0b3fff700 (LWP 1471)):
#0  0x00007fe11b315030 in pthread_mutex_unlock () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe11a8305e1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe11a7f4f0e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe11a7f5124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fe1210cc926 in QEventDispatcherGlib::processEvents (this=0x7fe0a0003030, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007fe12109be62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fe12109c0b7 in QEventLoop::exec (this=0x7fe0b3ffee00, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fe120f9b077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007fe120f9e09b in QThreadPrivate::start (arg=0x209be90) at thread/qthread_unix.cpp:307
#9  0x00007fe11b311e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#10 0x00007fe1209563fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fe0b2ffd700 (LWP 1472)):
#0  0x00007fe11b315d84 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe11f87f022 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007fe11f87f059 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007fe11b311e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007fe1209563fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fe09eac0700 (LWP 1477)):
#0  0x00007fe12094aa43 in poll () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007fe11a7f4ff6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe11a7f5124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe1210cc926 in QEventDispatcherGlib::processEvents (this=0x7fe008002ad0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fe12109be62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fe12109c0b7 in QEventLoop::exec (this=0x7fe09eabfe00, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fe120f9b077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fe120f9e09b in QThreadPrivate::start (arg=0x24f4d60) at thread/qthread_unix.cpp:307
#8  0x00007fe11b311e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#9  0x00007fe1209563fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fe09deb4700 (LWP 1605)):
#0  0x00007fe12094aa43 in poll () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007fe11a7f4ff6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe11a7f5124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe1210cc926 in QEventDispatcherGlib::processEvents (this=0x7fdff000a7c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fe12109be62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fe12109c0b7 in QEventLoop::exec (this=0x7fe09deb3dd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fe120f9b077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fe12107bb6f in QInotifyFileSystemWatcherEngine::run (this=0x2573430) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fe120f9e09b in QThreadPrivate::start (arg=0x2573430) at thread/qthread_unix.cpp:307
#9  0x00007fe11b311e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#10 0x00007fe1209563fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe1243fb780 (LWP 1456)):
[KCrash Handler]
#6  0x00007fe1238c3a50 in Marble::GeoDataTreeModel::index (this=0x1923650, object=<optimized out>) at ../../../../src/lib/marble/GeoDataTreeModel.cpp:519
#7  0x00007fe1238c483a in addFeature (row=-1, feature=0x33e9d30, parent=0x2577e20, this=0x1923650) at ../../../../src/lib/marble/GeoDataTreeModel.cpp:570
#8  Marble::GeoDataTreeModel::addFeature (this=0x1923650, parent=0x2577e20, feature=0x33e9d30, row=-1) at ../../../../src/lib/marble/GeoDataTreeModel.cpp:566
#9  0x00007fe1239a398a in Marble::BookmarkManager::addBookmark (this=0x19236d0, container=0x2577e20, placemark=...) at ../../../../src/lib/marble/BookmarkManager.cpp:132
#10 0x00007fe1238bf861 in Marble::MarbleWidgetPopupMenu::addBookmark (this=0x1f89cb0) at ../../../../src/lib/marble/MarbleWidgetPopupMenu.cpp:669
#11 0x00007fe1210b1781 in QMetaObject::activate (sender=0x1fbbed0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffc8eb7dd0) at kernel/qobject.cpp:3547
#12 0x00007fe121907072 in QAction::triggered (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:277
#13 0x00007fe12190725f in QAction::activate (this=0x1fbbed0, event=<optimized out>) at kernel/qaction.cpp:1257
#14 0x00007fe121d595e9 in QMenuPrivate::activateCausedStack (this=0x1f8bff0, causedStack=..., action=0x1fbbed0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1028
#15 0x00007fe121d5f742 in QMenuPrivate::activateAction (this=0x1f8bff0, action=0x1fbbed0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1120
#16 0x00007fe12195dfb4 in QWidget::event (this=0x1f89c60, event=0x7fffc8eb87f0) at kernel/qwidget.cpp:8371
#17 0x00007fe121d60cdb in QMenu::event (this=0x1f89c60, e=0x7fffc8eb87f0) at widgets/qmenu.cpp:2469
#18 0x00007fe12190d7b4 in notify_helper (e=0x7fffc8eb87f0, receiver=0x1f89c60, this=0x1873a20) at kernel/qapplication.cpp:4556
#19 QApplicationPrivate::notify_helper (this=0x1873a20, receiver=0x1f89c60, e=0x7fffc8eb87f0) at kernel/qapplication.cpp:4528
#20 0x00007fe121912f2f in QApplication::notify (this=<optimized out>, receiver=0x1f89c60, e=0x7fffc8eb87f0) at kernel/qapplication.cpp:4099
#21 0x00007fe122d670e6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#22 0x00007fe12109d32c in QCoreApplication::notifyInternal (this=0x7fffc8eb94f0, receiver=0x1f89c60, event=0x7fffc8eb87f0) at kernel/qcoreapplication.cpp:915
#23 0x00007fe12190e782 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#24 QApplicationPrivate::sendMouseEvent (receiver=0x1f89c60, event=0x7fffc8eb87f0, alienWidget=0x0, nativeWidget=0x1f89c60, buttonDown=0x0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3167
#25 0x00007fe12198e1e1 in QETWidget::translateMouseEvent (this=0x1f89c60, event=<optimized out>) at kernel/qapplication_x11.cpp:4551
#26 0x00007fe12198cace in QApplication::x11ProcessEvent (this=0x7fffc8eb94f0, event=0x7fffc8eb90c0) at kernel/qapplication_x11.cpp:3732
#27 0x00007fe1219b6052 in x11EventSourceDispatch (s=0x1865b20, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#28 0x00007fe11a7f4d13 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007fe11a7f5060 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007fe11a7f5124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007fe1210cc8bf in QEventDispatcherGlib::processEvents (this=0x1839ca0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#32 0x00007fe1219b5cde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007fe12109be62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#34 0x00007fe12109c0b7 in QEventLoop::exec (this=0x7fffc8eb9460, flags=...) at kernel/qeventloop.cpp:204
#35 0x00007fe1210a1407 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#36 0x000000000041c250 in main (argc=1, argv=0x7fffc8ebae58) at ../../../../src/apps/marble-kde/kdemain.cpp:399

Reported using DrKonqi
Comment 1 flyos 2014-02-25 14:54:48 UTC
Also, I forgot to mention that I can't have any bookmark added or bookmark folder created whatsoever (though without any crash when I'm either creating a folder, or adding a bookmark. The crash happens only while doing both at the same time). This is a more minor bug, but I thought the detail could be relevant.

Cheers !
Comment 2 Alan Prescott 2014-03-25 12:19:41 UTC
Created attachment 85731 [details]
New crash information added by DrKonqi

marble (1.7.0 (stable version)) on KDE Platform 4.12.3 using Qt 4.8.4

- What I was doing when the application crashed:
Attempting to add a bookmark and create a new folder for it

-- Backtrace (Reduced):
#6  0x00007fcb16041cba in Marble::GeoDataTreeModel::index (this=this@entry=0x259b740, object=object@entry=0x37fa2b0) at /usr/src/debug/marble-4.12.3/src/lib/marble/GeoDataTreeModel.cpp:519
#7  0x00007fcb16042772 in addFeature (row=-1, feature=0x39ba080, parent=0x37fa2b0, this=0x259b740) at /usr/src/debug/marble-4.12.3/src/lib/marble/GeoDataTreeModel.cpp:570
#8  Marble::GeoDataTreeModel::addFeature (this=0x259b740, parent=0x37fa2b0, feature=0x39ba080, row=-1) at /usr/src/debug/marble-4.12.3/src/lib/marble/GeoDataTreeModel.cpp:566
#9  0x00007fcb1611d4ca in Marble::BookmarkManager::addBookmark (this=0x259b7c0, container=0x37fa2b0, placemark=...) at /usr/src/debug/marble-4.12.3/src/lib/marble/BookmarkManager.cpp:132
#10 0x00007fcb1603de77 in Marble::MarbleWidgetPopupMenu::addBookmark (this=0x2807be0) at /usr/src/debug/marble-4.12.3/src/lib/marble/MarbleWidgetPopupMenu.cpp:669
Comment 3 Julien MÊME 2014-04-30 15:47:38 UTC
Created attachment 86373 [details]
New crash information added by DrKonqi

marble (1.7.97 (1.8 RC 1)) on KDE Platform 4.13.0 using Qt 4.8.5

- What I was doing when the application crashed: I was doing the same things like the other bug. A want add a new bookmark and I had required to create a new folder juste before approve the add.

I observed the impossibilité to create a new folder in the bookmark manager... after validate the folder name, many tags appeared... it is not the good context diplaid...

-- Backtrace (Reduced):
#6  0x00007f16186953d3 in Marble::GeoDataTreeModel::index (this=this@entry=0x1754a50, object=object@entry=0x33dce60) at /usr/src/debug/marble-4.13.0/src/lib/marble/GeoDataTreeModel.cpp:625
#7  0x00007f16186961af in Marble::GeoDataTreeModel::addFeature (this=0x1754a50, parent=parent@entry=0x33dce60, feature=feature@entry=0x33b3ea0, row=row@entry=-1) at /usr/src/debug/marble-4.13.0/src/lib/marble/GeoDataTreeModel.cpp:688
#8  0x00007f16187769ac in Marble::BookmarkManager::addBookmark (this=0x1754ad0, container=container@entry=0x33dce60, placemark=...) at /usr/src/debug/marble-4.13.0/src/lib/marble/BookmarkManager.cpp:137
#9  0x00007f1618692913 in Marble::MarbleWidgetPopupMenu::addBookmark (this=0x1a38300) at /usr/src/debug/marble-4.13.0/src/lib/marble/MarbleWidgetPopupMenu.cpp:424
[...]
#11 0x00007f161670f752 in QAction::triggered (this=this@entry=0x19170f0, _t1=false) at .moc/release-shared/moc_qaction.cpp:276
Comment 4 Vladislav Vorobiev 2014-07-10 06:16:10 UTC
Created attachment 87671 [details]
New crash information added by DrKonqi

marble (1.7.97 (1.8 RC 1)) on KDE Platform 4.13.1 using Qt 4.8.6

- What I was doing when the application crashed:
Add bookmark and create the category-folder.
Debian package

-- Backtrace (Reduced):
#6  0x00007f8595215483 in Marble::GeoDataTreeModel::index(Marble::GeoDataObject*) () from /usr/lib/libmarblewidget.so.18
#7  0x00007f859521624f in Marble::GeoDataTreeModel::addFeature(Marble::GeoDataContainer*, Marble::GeoDataFeature*, int) () from /usr/lib/libmarblewidget.so.18
#8  0x00007f85952f66ac in Marble::BookmarkManager::addBookmark(Marble::GeoDataContainer*, Marble::GeoDataPlacemark const&) () from /usr/lib/libmarblewidget.so.18
#9  0x00007f85952129e3 in Marble::MarbleWidgetPopupMenu::addBookmark() () from /usr/lib/libmarblewidget.so.18
[...]
#11 0x00007f8593242912 in QAction::triggered (this=this@entry=0x2d1fd50, _t1=false) at .moc/release-shared/moc_qaction.cpp:276
Comment 5 Martin 2014-08-20 21:34:27 UTC
Created attachment 88338 [details]
New crash information added by DrKonqi

marble (1.8.20 (1.9 Alpha)) on KDE Platform 4.13.97 using Qt 4.8.6

- What I was doing when the application crashed:

This crash is still prominent, updating bug information.

-- Backtrace (Reduced):
#6  0x00007f271bbdb4c3 in Marble::GeoDataTreeModel::index (this=this@entry=0xd4f940, object=object@entry=0x4068560) at ../../../../src/lib/marble/GeoDataTreeModel.cpp:733
#7  0x00007f271bbdc29f in Marble::GeoDataTreeModel::addFeature (this=0xd4f940, parent=parent@entry=0x4068560, feature=feature@entry=0x4113c10, row=row@entry=-1) at ../../../../src/lib/marble/GeoDataTreeModel.cpp:796
#8  0x00007f271bcbe1cc in Marble::BookmarkManager::addBookmark (this=0xd4f9c0, container=container@entry=0x4068560, placemark=...) at ../../../../src/lib/marble/BookmarkManager.cpp:137
#9  0x00007f271bbd88e3 in Marble::MarbleWidgetPopupMenu::addBookmark (this=0x1323c00) at ../../../../src/lib/marble/MarbleWidgetPopupMenu.cpp:643
[...]
#11 0x00007f2719c47a62 in QAction::triggered (this=this@entry=0xc911f0, _t1=false) at .moc/release-shared/moc_qaction.cpp:276
Comment 6 Dennis Nienhüser 2015-04-06 08:37:24 UTC
*** Bug 338189 has been marked as a duplicate of this bug. ***
Comment 7 Dennis Nienhüser 2015-04-06 08:37:56 UTC
*** Bug 344880 has been marked as a duplicate of this bug. ***
Comment 8 Dennis Nienhüser 2015-04-06 10:50:13 UTC
Found the culprit - bookmark sync is active even if it shouldn't, and buggy on top, leading to the crash.
Comment 9 Dennis Nienhüser 2015-04-06 13:39:30 UTC
*** Bug 333188 has been marked as a duplicate of this bug. ***
Comment 10 Dennis Nienhüser 2015-04-06 13:45:55 UTC
Git commit 15e1c73f14ea7e8c435789d73b87b7c8caf7deb3 by Dennis Nienhüser.
Committed on 06/04/2015 at 13:45.
Pushed by nienhueser into branch 'master'.

Disable bookmark sync if cloud sync is disabled

M  +1    -1    src/lib/marble/cloudsync/BookmarkSyncManager.cpp

http://commits.kde.org/marble/15e1c73f14ea7e8c435789d73b87b7c8caf7deb3
Comment 11 Dennis Nienhüser 2015-04-06 13:45:56 UTC
Git commit b83027de6f80ec41ba5e123306ff905241b8b607 by Dennis Nienhüser.
Committed on 06/04/2015 at 13:45.
Pushed by nienhueser into branch 'master'.

No need to reload bookmarks after copying them to the cache folder

As this code section is called after bookmarks are changed in memory,
there was a race condition between writing changed bookmarks to disk
and reloading them here, often leading to inconsistencies or crashes.

M  +0    -4    src/lib/marble/cloudsync/BookmarkSyncManager.cpp

http://commits.kde.org/marble/b83027de6f80ec41ba5e123306ff905241b8b607
Comment 12 Dennis Nienhüser 2015-04-06 13:50:39 UTC
Git commit ba64a37c5c7d26d037d083f54af522456ab042a8 by Dennis Nienhüser.
Committed on 06/04/2015 at 13:47.
Pushed by nienhueser into branch 'Applications/15.04'.

Disable bookmark sync if cloud sync is disabled
(cherry picked from commit 15e1c73f14ea7e8c435789d73b87b7c8caf7deb3)

M  +1    -1    src/lib/marble/cloudsync/BookmarkSyncManager.cpp

http://commits.kde.org/marble/ba64a37c5c7d26d037d083f54af522456ab042a8
Comment 13 Dennis Nienhüser 2015-04-06 13:50:40 UTC
Git commit 7827de70d20c3b82ec39becf45d789902d7bf606 by Dennis Nienhüser.
Committed on 06/04/2015 at 13:47.
Pushed by nienhueser into branch 'Applications/15.04'.

No need to reload bookmarks after copying them to the cache folder

As this code section is called after bookmarks are changed in memory,
there was a race condition between writing changed bookmarks to disk
and reloading them here, often leading to inconsistencies or crashes.
(cherry picked from commit b83027de6f80ec41ba5e123306ff905241b8b607)

M  +0    -4    src/lib/marble/cloudsync/BookmarkSyncManager.cpp

http://commits.kde.org/marble/7827de70d20c3b82ec39becf45d789902d7bf606
Comment 14 Dennis Nienhüser 2015-04-06 13:53:30 UTC
Git commit dde065612fb658d05c198f3ab5ad8a76feb02f7c by Dennis Nienhüser.
Committed on 06/04/2015 at 13:51.
Pushed by nienhueser into branch 'Applications/14.12'.

Disable bookmark sync if cloud sync is disabled
(cherry picked from commit 15e1c73f14ea7e8c435789d73b87b7c8caf7deb3)
(cherry picked from commit ba64a37c5c7d26d037d083f54af522456ab042a8)

M  +1    -1    src/lib/marble/cloudsync/BookmarkSyncManager.cpp

http://commits.kde.org/marble/dde065612fb658d05c198f3ab5ad8a76feb02f7c
Comment 15 Dennis Nienhüser 2015-04-06 13:53:31 UTC
Git commit 3d47be400fdb9ae91573700edd5671d58563ddc3 by Dennis Nienhüser.
Committed on 06/04/2015 at 13:52.
Pushed by nienhueser into branch 'Applications/14.12'.

No need to reload bookmarks after copying them to the cache folder

As this code section is called after bookmarks are changed in memory,
there was a race condition between writing changed bookmarks to disk
and reloading them here, often leading to inconsistencies or crashes.
(cherry picked from commit b83027de6f80ec41ba5e123306ff905241b8b607)
(cherry picked from commit 7827de70d20c3b82ec39becf45d789902d7bf606)

M  +0    -4    src/lib/marble/cloudsync/BookmarkSyncManager.cpp

http://commits.kde.org/marble/3d47be400fdb9ae91573700edd5671d58563ddc3
Comment 16 Dennis Nienhüser 2015-08-01 17:15:04 UTC
*** Bug 350857 has been marked as a duplicate of this bug. ***