No need to reload bookmarks after copying them to the cache folder

As this code section is called after bookmarks are changed in memory,
there was a race condition between writing changed bookmarks to disk
and reloading them here, often leading to inconsistencies or crashes.

BUG: 331494
(cherry picked from commit b83027de6f80ec41ba5e123306ff905241b8b607)
(cherry picked from commit 7827de70d20c3b82ec39becf45d789902d7bf606)